@@ -1,6 +1,6 @@
 LIB2ADD += $(srcdir)/config/riscv/save-restore.S \
 	   $(srcdir)/config/riscv/muldi3.S \
-	   $(srcdir)/config/riscv/multi3.S \
+	   $(srcdir)/config/riscv/multi3.c \
 	   $(srcdir)/config/riscv/div.S \
 	   $(srcdir)/config/riscv/atomic.c \
 
