@@ -1,3 +1,9 @@
+2017-08-03  Kito Cheng <kito.cheng@gmail.com>
+
+	* config/riscv/t-elf: Use multi3.c instead of multi3.S.
+	* config/riscv/multi3.c: New file.
+	* config/riscv/multi3.S: Remove.
+
 2017-07-28  Sebastian Huber  <sebastian.huber@embedded-brains.de>
 
 	* config/rs6000/ibm-ldouble.c: Disable if defined __rtems__.
